Slight changes to styles -height -accents and css around header and tab area

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -34,7 +34,7 @@
 				--color-base-orange: 22, 100%;
 				--color-gray-90: var(--color-base-gray), 90%;
 				--color-orange: var(--color-base-orange), 60%;
-				--theme-accent: #539bf5;
+				--theme-accent: hsl(94, 47%, 54%, 100%);
 				--theme-accent-secondary: hsla(var(--color-orange), 1);
 				--theme-bg: hsl(256, 27%, 19%);
 				--theme-bg-gradient-top: var(--theme-bg);
